project alignment fix

--- a/css/sup.dude.sass
+++ b/css/sup.dude.sass
@@ -89,6 +89,7 @@ header
     text-align: center
     margin-bottom: $half-spacing
   ul
+    margin: 0
     list-style: none
     text-align: center
     li
